# qeet-id-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .golangci.yml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.migrate  IMPROVEMENTS.md  LAUNCH_READINESS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STATUS.md  biome.json  docker-compose.yml  eslint.config.mjs  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.tree  release-please-config.json  sqlc.yaml  turbo.json  vercel.json
.claude/: HOW-TO-RUN.md  PIPELINE.md  README.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
deploy/: .env.example  Caddyfile  Dockerfile.migrate  README.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  BACKEND.md
documents/: FEATURE-MATRIX.md  IMPLEMENTATION-STATUS.md
frontend/: .gitignore  eslint.config.mjs  package.json  (+2 more)
sdk/python/: README.md  pyproject.toml
sdk/python/qeetid/: __init__.py  agents.py  api_keys.py  audit_logs.py  auth_hooks.py  auth_policy.py  branding.py  client.py  credentials.py  domains.py  email_templates.py  errors.py  groups.py  invitations.py  ip_rules.py  mfa.py  oauth_helpers.py  oidc_clients.py  permissions.py  roles.py  saml.py  sessions.py  tenants.py  users.py  vault.py  webhooks.py
sdk/python/tests/: test_client.py  test_sessions.py
(+2058 files in other folders)
